# botc-mcp

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.githooks/: pre-commit
.superpowers/sdd/: round3-fix-report.md  round4-fix-report.md  task-14-report.md
docs/: README.md  abilities-rules.md  architecture.md  characters.md  death-and-ghosts.md  gameplay-loop.md  glossary.md  harness.md  mcp.md  night-order.md  overview.md  setup.md  signals.md  sources.md  states.md  storyteller.md  voting-and-nominations.md  win-conditions.md
docs/roles/: README.md  character-types.md  demon.md  minions.md  outsiders.md  tb-demon.md  tb-minions.md  tb-outsiders.md  tb-townsfolk.md  townsfolk.md
docs/scripts/: other-editions.md  trouble-brewing.md
examples/: harness_smoke.rs
leaderboard/: README.md  worker.js  wrangler.toml
leaderboard/public/: index.html
scripts/: model_aliases.py  publish_leaderboard.py  rate_models.py  run_leaderboard_publisher.sh  test_node_key.py
src/: auth.rs  comms.rs  error.rs  lib.rs  main.rs  mcp_server.rs  rng.rs  store.rs
src/game/: day.rs  ids.rs  mod.rs  night.rs  phase.rs  seat.rs  setup.rs  st_policy.rs  state.rs  win.rs
src/harness/: action_log.rs  agents.rs  balance.rs  debug_log.rs  mod.rs  prompts.rs  proxy_acl.rs  results_log.rs  scheduler.rs  socket.rs  tui.rs  wake.rs
src/roles/: data.rs  mod.rs  night_order.rs
src/tools/: mod.rs  rules_docs.rs  rules_text.rs  views.rs
tests/: day_tests.rs  debug_log_smoke.rs  harness_grok_live.rs  harness_socket.rs  identity_tests.rs  issue1_rules_audit.rs  night_death_visibility.rs  night_tests.rs  reaudit_followups.rs  reaudit_round4.rs  reaudit_round5.rs  reaudit_round6.rs  rng_tests.rs  say_phase_gate.rs  scenario_full_night_day.rs  scenario_imp_exec.rs  scenario_sw_starpass.rs  setup_tests.rs  st_host_first_and_rules_docs.rs  turn_gate.rs  win_tests.rs
tests/common/: mod.rs
(+34 files in other folders)
