[package]
name = "botc-mcp"
version = "0.1.0"
edition = "2021"
description = "Eval MCP server for Blood on the Clocktower"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
