[package]
name = "botc-mcp"
version = "0.1.0"
edition = "2021"
description = "Eval MCP server for Blood on the Clocktower"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "botc-mcp"
path = "src/main.rs"

[[bin]]
name = "botc-tui"
path = "src/bin/botc-tui.rs"

[[bin]]
name = "botc-agent-mcp"
path = "src/bin/botc-agent-mcp.rs"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
# TUI multi-agent harness
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
